--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "url": "git+https://github.com/georgewood749/js_actions.git"
   },
   "keywords": [
-    "futureproof",
-    "exercise",
-    "kai",
-    "george",
-    "dave"
+    "futureproof"
   ],
   "author": "",
   "license": "ISC",
