--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "url": "git+https://github.com/georgewood749/js_actions.git"
   },
   "keywords": [
-    "futureproof"
+    "futureproof",
+    "kai",
+    "george",
+    "dave"
   ],
   "author": "",
   "license": "ISC",
